worked on drag drop feature of react

--- a/sem/src/App.css
+++ b/sem/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-items: center;
+}
+
+
+.dropzone{
+  border-style: dashed;
+  padding: 20px;
+}
