--- a/client/src/Components/Navigation/Navigation.css
+++ b/client/src/Components/Navigation/Navigation.css
@@ -3,4 +3,8 @@
     background-color: white;
     font-size:large;
     font-weight:300;
+
+    color: black;
+    text-decoration: none;
+    font-style: bold;
 }
